--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,45 @@
  *= require_self
  */
 @import 'normalize';
-// @import 'global';
 @import 'docs';
 @import 'welcome';
+
+body {
+  color: black;
+  display: flex;
+  flex-direction: column;
+}
+
+h1 {
+  color: black;
+}
+
+h2 {
+  text-transform: capitalize;
+}
+
+a {
+  color: #62CCCC;
+}
+
+.header_inner {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: aliceblue;
+
+  a {
+    color: black;
+    text-decoration: none;
+  }
+}
+
+nav {
+  a {
+    padding: 0 20px;
+  }
+}
+
+.wrap {
+  padding: 2%;
+}
