--- a/app/views/docs/index.html.haml
+++ b/app/views/docs/index.html.haml
@@ -1,6 +1,13 @@
-- @docs.each do |doc|
- %h2= link_to doc.title, doc
- %p= time_ago_in_words(doc.created_at)
- %p= truncate(doc.content, length: 50)
-
-= link_to "Create a new Doc", new_doc_path
+.wrapper_with_pading
+  #docs.clearfix
+    - unless @docs.blank?
+      - @docs.each do |doc|
+        %a{ href: (url_for [doc])}
+          .doc
+            %p.title= link_to doc.title, doc
+            %p.date= time_ago_in_words(doc.created_at)
+            %p.content= truncate(doc.content, length: 50)
+    - else
+      %h Create a Doc !
+      %p Start Creating Documents and Organize your files
+      %button= link_to "New Documents", new_doc_path
