--- a/app/views/docs/edit.html.haml
+++ b/app/views/docs/edit.html.haml
@@ -1,5 +1,5 @@
-%h1 Edit Doc
+.wrapper_with_pading
+  %h1.new-doc Edit Doc
+  = render 'form'
 
-= render 'form'
-
-= link_to "Cancel", doc_path
+  = link_to "Cancel", doc_path
